Fixed image in homepage

--- a/web/homepage.html
+++ b/web/homepage.html
@@ -56,7 +56,7 @@
         <img class="pics" src="camping.jpg" alt="Camping Lookout" />
     </div><br />
     <div class="col-4 col-s-4">
-        <img class="pics" src="family.jpg" alt="Family" />
+        <img class="pics" src="family.JPG" alt="Family" />
     </div>
     <div class="col-8 col-s-8">
         <p class="title">Family</p>
