Fixed added checkbox

--- a/web/Week3Team.html
+++ b/web/Week3Team.html
@@ -19,7 +19,15 @@
         <input type="radio" name="major" value="Computer Engineering" />Computer Engineering
         <br /><br />
         <textarea name="comments"></textarea>
-        <button type="submit">Submit</button>        
+        <button type="submit">Submit</button>
+        <br /><br />
+        <input type="checkbox" name="continent1" value="North America" />North America
+        <input type="checkbox" name="continent2" value="South America" />South America
+        <input type="checkbox" name="continent3" value="Europe" />Europe
+        <input type="checkbox" name="continent4" value="Asia" />Asia
+        <input type="checkbox" name="continent5" value="Australia" />Australia
+        <input type="checkbox" name="continent6" value="Africa" />Africa
+        <input type="checkbox" name="continent7" value="Antarctica" />Antarctica
     </form>
 </body>
 </html>
