Added Prove 03 Shopping Cart

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -8,6 +8,8 @@
     <script src="homepage.js"></script>
 </head>
 <body>
-    <div class="construction">This page is coming soon!</div>
+    <div class="assignment">
+        <a href="https://powerful-basin-71330.herokuapp.com/CS313_Shopping_Cart/shoppingCart.php">Assignment Prove Week 03</a>
+    </div>
 </body>
 </html>
