--- a/web/assignments.html
+++ b/web/assignments.html
@@ -8,7 +8,7 @@
     <script src="homepage.js"></script>
 </head>
 <body>
-    <div class="assignment">
+    <div class="present">
         <a href="https://powerful-basin-71330.herokuapp.com/cs313_Shopping_Cart/shoppingCart.php">Assignment Prove Week 03</a>
     </div>
 </body>
