--- a/web/assignments.html
+++ b/web/assignments.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="present">
-        <a href="https://powerful-basin-71330.herokuapp.com/cs313_Shopping_Cart/shoppingCart.php">Assignment Prove Week 03</a>
+        <a href="https://powerful-basin-71330.herokuapp.com/cs313_Shopping_Cart/shoppingCart.php">Assignment Shopping Cart</a>
+    </div>
+    <div class="present">
+        <a href="https://powerful-basin-71330.herokuapp.com/journal_start.php">Assignment Journal Project</a>
     </div>
 </body>
 </html>
